--- a/src/app/globals copy.css
+++ b/src/app/globals copy.css
@@ -2,8 +2,9 @@
 
 body {
   padding: 0;
-  margin: 0;
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
   font-family: 'Parkinsans', sans-serif;
   font-optical-sizing: auto;
@@ -13,44 +14,41 @@ body {
   background-repeat: no-repeat; */
 }
 
-.title {
-  width: 100%;
-  text-align: center;
-}
-
-.poster img {
-  max-height: 80vh;
-  aspect-ratio: 1/1;
-}
-
-.game {
+.board {
   display: grid;
   grid-template-columns: repeat(10, auto);
-  gap: 4px;
+  gap: 5px;
 }
 
 .cell {
-  min-width: 50px;
-  min-height: 50px;
+  width: 66px;
+  height: 66px;
 }
 
-.column-fixed {
-  position: fixed;
-  background-color: #00a7eb;
+.poster {
+  margin: 0;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+}
+
+.poster img {
+  height: 100%;
 }
 
 @media (max-width: 768px) {
   /* Estilos para smartphones maiores */
-
-  .column-fixed {
-    position: relative;
-  }
-
-  .poster img {
-    width: 100vw;
-  }
-
-  .game {
+  .board {
     grid-template-columns: repeat(7, auto);
+  }
+
+  .cell {
+    width: 50px;
+    height: 50px;
+  }
+
+  .poster {
+    width: 100vw;
+    height: 100vw;
   }
 }
